# secretmanager

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
src/secretmanager/: __init__.py  cache.py  error.py  registry.py  secret.py  settings.py  store.py  version.py
src/secretmanager/cli/: __init__.py  cache.py  cli.py  secret.py  settings.py  stores.py
src/secretmanager/implementations/: aws.py  dotenv.py  env.py  sops.py
tests/: conftest.py  test_secret.py  test_secret_value.py  test_store.py
tests/implementations/: test_aws.py  test_dotenv.py  test_env.py  test_sops.py
